--- a/views/user.hbs
+++ b/views/user.hbs
@@ -19,18 +19,68 @@
 	</div>
 
 	<h1>{{user.name.full}}</h1>
-	<div>
-		<d1>
-			<dt>Street</dt>
-			<dd>{{address.street}}</dd>
-			<dt>City</dt>
-			<dd>{{address.city}}</dd>
-			<dt>State</dt>
-			<dd>{{address.state}}</dd>
-			<dt>Zip</dt>
-			<dd>{{address.zip}}</dd>
-		</d1>
-	</div>
+	<dl>
+		<dt>Street</dt>
+		<dd class="view">{{address.street}}</dd>
+		<dd class="edit"><input id="street" type="text" value="{{address.street}}"></dd>
+		<br>
+		<dt>City</dt>
+		<dd class="view">{{address.city}}</dd>
+		<dd class="edit"><input id="city" type="text" value="{{address.city}}"></dd>
+		<br>
+		<dt>State</dt>
+		<dd class="view">{{address.state}}</dd>
+		<dd class="edit"><input id="state" type="text" value="{{address.state}}"></dd>
+		<br>
+		<dt>Zip</dt>
+		<dd class="view">{{address.zip}}</dd>
+		<dd class="edit"><input id="zip" type="text" value="{{address.zip}}"></dd>
+		<br>
+		<dt></dt>
+		<dd class="edit">
+			<input type="submit" value="Save" onclick="save()">
+			<input type="submit" value="Cancel" onclick="cancel()">
+		</dd>
+	</dl>
+
+	 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	 <script>
+	 	function edit(){
+	 		$('.view').hide()
+	 		$('.edit').show()
+	 	}
+
+	 	function cancel() {
+	 		$('.view').show()
+	 		$('.edit').hide()
+	 	}
+
+	 	function save(){
+	 		$.ajax('/{{user.username}}', {
+	 			console.log("this:", this)
+	 			method: 'PUT',
+	 			data: {
+	 				street: $('#street').val(),
+	 				city: $('#city').val(),
+	 				state: $('#state').val(),
+	 				zip: $('#zip').val()
+	 			},
+	 			complete: function(){
+	 				cancel()
+	 				location.reload()
+	 			}
+	 		})
+	 	}
+
+	 	function del(){
+	 		$.ajax('/{{user.username}}', {
+	 			method: 'DELETE',
+	 			complete: function(){
+	 				location = '/'
+	 			}
+	 		})
+	 	}
+	 </script>
 
 </body>
 </html>
